fix wrap of unbroken lines

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -2690,6 +2690,7 @@ tbody.commit-list {
 /* in the commit list, messages can wrap so we can use inline */
 .commit-list .message-wrapper {
   display: inline;
+  overflow-wrap: anywhere;
 }
 
 /* but in the repo-files-table we cannot */
